fixed spacing issue on desktop mode when viewing recipes

--- a/style.css
+++ b/style.css
@@ -1035,7 +1035,6 @@ ol {
     }
 
     .results-wrapper{
-        height:93%;
         position:relative;
         top:7%
     }
@@ -1266,7 +1265,6 @@ ol {
     }
 
     .results-wrapper{
-        height:92%;
         position:relative;
         top:8%
     }
